# FidelityFX

./: .gitignore  .gitlab-ci.yml  README.md
FFX_CAS/: README.md
FFX_CAS/cas-samples/: CMakeLists.txt  README.md  license.md
FFX_CAS/cas-samples/libs/cauldron/: .gitlab-ci.yml  readme.md
FFX_CAS/cas-samples/libs/cauldron/src/DX12/PostProc/: Bloom.cpp  Bloom.h
FFX_CAS/cas-samples/libs/cauldron/src/VK/PostProc/: Bloom.cpp  Bloom.h
FFX_CAS/cas-samples/libs/cauldron/src/common/GLTF/: GltfCommon.cpp
FFX_CAS/cas-samples/src/DX12/: CAS_CS.cpp  CAS_CS.h  CAS_RenderPS.hlsl  CAS_Renderer.cpp  CAS_Renderer.h  CAS_Sample.cpp  CAS_Sample.h  CAS_Shader.hlsl  CMakeLists.txt  stdafx.cpp  stdafx.h
FFX_CAS/cas-samples/src/VK/: CAS_CS.cpp  CAS_CS.h  CAS_RenderPS.glsl  CAS_Renderer.cpp  CAS_Renderer.h  CAS_Sample.cpp  CAS_Sample.h  CAS_Shader.glsl  CMakeLists.txt  dpiawarescaling.manifest  stdafx.cpp  stdafx.h
FFX_CAS/cauldron-media/: NOTICES.txt  readme.md
FFX_CAS/cauldron-media/BoomBox/: README.md
FFX_CAS/cauldron-media/BoomBox/glTF/: BoomBox.gltf
FFX_CAS/cauldron-media/DamagedHelmet/: README.md
FFX_CAS/cauldron-media/DamagedHelmet/glTF/: DamagedHelmet.gltf
FFX_CAS/cauldron-media/buster_drone/: LICENSE.md  busterDrone.gltf
FFX_CAS/cauldron-media/envmaps/papermill/: README.md
FidelityFX_banners/: AMD FidelityFX_Left_Black_RGB.eps  AMD FidelityFX_Left_White_RGB.eps  AMD_FidelityFX_Lockup_Black_RGB.eps  AMD_FidelityFX_Lockup_Reversed_RGB.eps  AMD_FidelityFX_Super_Resolution_Lockup_RGB_Blk.eps  AMD_FidelityFX_Super_Resolution_Lockup_RGB_Wht.eps
